	'src/common/codec.cpp'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glasscoder/glasscoder.cpp' where the
	descructors would fail to be executed upon reception of a SIGINT
	or SIGTERM signal.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added '|' character to separate the source and parameter name
	fields in statistics data.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CmdSwitch::addOverlay()' method in
	'src/common/cmdswitch.cpp' and 'src/common/cmdswitch.h'.
	* Implemented a run-control file for glassplayer(1) at
	'/etc/glassplayer.conf' and '$HOME/glassplayerrc'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a glassplayergui(1) applet in 'src/glassplayergui/'.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Got glassplayergui(1) working with XCast servers.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Enumerated exit error codes in 'src/common/glasslimits.h'.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Optimized the stats interface to send updates only when values
	change.
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the metadata system in glassplayer(1) to include
	static as well as dynamic fields.
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metadata display in glassplayergui(1).
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Added stats dialog to glassplayergui(1).
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Show Stats' to toggle between showing and hiding
	the 'Stats' dialog'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Tuned the layout of the 'Statistics' dialog.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'gui' subpackage in 'glassplayer.spec.in'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a man page for glassplayergui(1).